{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 56,
  "lineage": "2609523c-e933-6147-76bf-8e879ee0dc58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:loadbalancer/app/nodejs-backend-alb/b70591293050d990",
            "arn_suffix": "app/nodejs-backend-alb/b70591293050d990",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nodejs-backend-alb-806273006.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:loadbalancer/app/nodejs-backend-alb/b70591293050d990",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nodejs-backend-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06fe832398748df1a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05ec2ad4373cf1f56"
              },
              {
                "subnet_id": "subnet-06b4638c05152127e"
              },
              {
                "subnet_id": "subnet-097f506bd5a9a149f"
              }
            ],
            "subnets": [
              "subnet-05ec2ad4373cf1f56",
              "subnet-06b4638c05152127e",
              "subnet-097f506bd5a9a149f"
            ],
            "tags": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "tags_all": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "vpc_id": "vpc-059f1889790a84c96",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:listener/app/nodejs-backend-alb/b70591293050d990/5bdde735a6ecdd32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:targetgroup/nodejs-backend-tg/236ddb1731887bb2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:listener/app/nodejs-backend-alb/b70591293050d990/5bdde735a6ecdd32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:loadbalancer/app/nodejs-backend-alb/b70591293050d990",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "tags_all": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:targetgroup/nodejs-backend-tg/236ddb1731887bb2",
            "arn_suffix": "targetgroup/nodejs-backend-tg/236ddb1731887bb2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:993484236288:targetgroup/nodejs-backend-tg/236ddb1731887bb2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nodejs-backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "tags_all": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-059f1889790a84c96"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993484236288:security-group/sg-0f0ece2bbf1141fea",
            "description": "Allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0ece2bbf1141fea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fe832398748df1a"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "nodejs-backend-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "993484236288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "tags_all": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f1889790a84c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993484236288:security-group/sg-06fe832398748df1a",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fe832398748df1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nodejs-backend-alb-sg",
            "name_prefix": "",
            "owner_id": "993484236288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "tags_all": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f1889790a84c96"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:993484236288:security-group/sg-096af0d8a9634639d",
            "description": "Security group for VPC interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096af0d8a9634639d",
            "ingress": [],
            "name": "nodejs-backend-vpce-sg",
            "name_prefix": "",
            "owner_id": "993484236288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env",
              "Name": "nodejs-backend-vpce-sg"
            },
            "tags_all": {
              "Application": "nodejs-backend",
              "Environment": "nodejs-backend-env",
              "Name": "nodejs-backend-vpce-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059f1889790a84c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_tasks",
            "aws_security_group.lb"
          ]
        }
      ]
    }
  ]
}